fix: Fix dashboard clipping

--- a/src/ui/components/layout/navbar/Navbar.css
+++ b/src/ui/components/layout/navbar/Navbar.css
@@ -4,7 +4,7 @@
   position: sticky;
   top: 0;
   background-color: aliceblue;
-  box-shadow: 0px 0px 35px 0px rgba(154, 161, 171, 0.25);
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   border-bottom: 0px solid #dee2e6;
   transition: all 0.25s ease-in-out;
   z-index:100;
