--- a/src/ui/components/modules/dashboard/content/DashboardContent.css
+++ b/src/ui/components/modules/dashboard/content/DashboardContent.css
@@ -1,15 +1,27 @@
 .c-dashboard__main-content {
-    background-color: black;
-    color: white;
-    padding: var(--page-content-padding);
-    width: 100%;
-    transition: all 0.3s ease;
+  background-color: white;
+  color: black;
+  padding: var(--page-content-padding);
+  width: 100%;
+  transition: all 0.3s ease;
+  overflow-y: scroll;
+}
+
+.c-dashboard__container {
+  padding: 10px;
+}
+
+/* tablet breakpoint */
+@media (max-width: 1024px) {
+  .c-dashboard__main-content {
+    overflow-y: scroll; /* can scroll */
+    overflow-x: hidden;
   }
-  
-  /* desktop breakpoint */
-  @media (min-width: 1024px) {
-    .c-dashboard__main-content {
-      overflow-y: auto; /* can scroll */
-    }
+}
+
+/* desktop breakpoint */
+@media (min-width: 1024px) {
+  .c-dashboard__main-content {
+    overflow-y: auto; /* can scroll */
   }
-  
+}
